--- a/frontend/src/app/shared/user-status/user-status.component.css
+++ b/frontend/src/app/shared/user-status/user-status.component.css
@@ -1,4 +1,13 @@
+html, body {
+  height: 100%;
+  overflow: hidden;   /* ✅ bloque le scroll */
+  margin: 0;
+  padding: 0;
+}
+
 .user-status {
+  position: relative; /* nécessaire pour appliquer le z-index */
+  z-index: 2; /* au-dessus du pseudo-élément ::before */
   background: #fff5f0;
   padding: .5rem 1rem;
   text-align: right;
