--- a/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
@@ -6,36 +6,40 @@
     <div class="dashboard-body">
       <p>Accédez aux fonctionnalités d’administration :</p>
 
-      <section class="dashboard-section">
-        <button routerLink="/planning" class="btn">
-          Voir le planning
-        </button>
-      </section>
+      <div class="dashboard-buttons">
 
-      <section class="dashboard-section">
-        <button routerLink="/dashboards/operator/ingredients" class="btn">
-          Gérer les ingrédients
-        </button>
-      </section>
 
-      <section class="dashboard-section">
-        <button routerLink="/dashboards/admin/accounting" class="btn">
-          Ouvrir la comptabilité
-        </button>
-      </section>
+        <section class="dashboard-section">
+          <button routerLink="/planning" class="btn">
+            Voir le planning
+          </button>
+        </section>
 
-      <section class="dashboard-section">
-        <button routerLink="/dashboards/admin/settings" class="btn">
-          Réglages généraux
-        </button>
-      </section>
+        <section class="dashboard-section">
+          <button routerLink="/dashboards/operator/ingredients" class="btn">
+            Gérer les ingrédients
+          </button>
+        </section>
 
-      <section class="dashboard-section">
-        <p>Accéder au menu :</p>
-        <button routerLink="/menu" class="btn">
-          Menu
-        </button>
-      </section>
+        <section class="dashboard-section">
+          <button routerLink="/dashboards/admin/accounting" class="btn">
+            Ouvrir la comptabilité
+          </button>
+        </section>
+
+        <section class="dashboard-section">
+          <button routerLink="/dashboards/admin/settings" class="btn">
+            Réglages généraux
+          </button>
+        </section>
+      </div>
+
+        <section class="dashboard-section">
+          <p>Accéder au menu :</p>
+          <button routerLink="/menu" class="btn">
+            Menu
+          </button>
+        </section>
     </div>
   </div>
 </div>
