--- a/frontend/src/app/features/dashboards/dashboards.component.css
+++ b/frontend/src/app/features/dashboards/dashboards.component.css
@@ -32,7 +32,7 @@ html, body {
   background: #fff;
   border-radius: 1rem;
   box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-  max-width: 600px;
+  max-width: 1600px;
   width: 100%;
   padding: 2rem;
 
@@ -62,6 +62,13 @@ html, body {
   font-size: 1.1rem;
   color: #f0e3c0;
   margin-bottom: 1.5rem;
+}
+
+.dashboard-buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 /* Boutons */
