--- a/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
@@ -4,26 +4,28 @@
       <h1>Tableau de bord – Opérateur</h1>
     </header>
     <div class="dashboard-body">
-      <section class="dashboard-section">
-        <p>Accédez au planning des commandes :</p>
-        <button routerLink="/planning" class="btn">
-          Voir le planning
-        </button>
-      </section>
+      <div class="dashboard-buttons">
+        <section class="dashboard-section">
+          <p>Accédez au planning des commandes :</p>
+          <button routerLink="/planning" class="btn">
+            Voir le planning
+          </button>
+        </section>
 
-      <section class="dashboard-section">
-        <p>Gérez la disponibilité des ingrédients :</p>
-        <button routerLink="/dashboards/operator/ingredients" class="btn">
-          Gérer les ingrédients
-        </button>
-      </section>
+        <section class="dashboard-section">
+          <p>Gérez la disponibilité des ingrédients :</p>
+          <button routerLink="/dashboards/operator/ingredients" class="btn">
+            Gérer les ingrédients
+          </button>
+        </section>
+      </div>
 
-      <section class="dashboard-section">
-        <p>Accéder au menu :</p>
-        <button routerLink="/menu" class="btn">
-          Menu
-        </button>
-      </section>
+        <section class="dashboard-section">
+          <p>Accéder au menu :</p>
+          <button routerLink="/menu" class="btn">
+            Menu
+          </button>
+        </section>
     </div>
   </div>
 </div>
