--- a/frontend/src/app/features/planning/planning.component.html
+++ b/frontend/src/app/features/planning/planning.component.html
@@ -49,11 +49,11 @@
         <td>{{ order.status }}</td>
 
         <td>
-          <button (click)="removeOrder(order.id)" class="btn-delete">Supprimer</button>
+          <button (click)="removeOrder(order.id)" class="btn btn-secondary">Supprimer</button>
         </td>
         
         <td>
-          <a routerLink="/recap" class="btn-modify">Modifier</a>
+          <a routerLink="/recap" class="btn btn-primary">Modifier</a>
         </td>
       </tr>
     </tbody>
