Clean dashboards (il reste bcp a faire)

--- a/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
@@ -6,22 +6,20 @@
     <div class="dashboard-body">
       <div class="dashboard-buttons">
         <section class="dashboard-section">
-          <p>Accédez au planning des commandes :</p>
+
           <button routerLink="/planning" class="btn">
-            Voir le planning
+            Planning
           </button>
         </section>
 
         <section class="dashboard-section">
-          <p>Gérez la disponibilité des ingrédients :</p>
           <button routerLink="/dashboards/operator/ingredients" class="btn">
-            Gérer les ingrédients
+            Disponibilité des ingrédients
           </button>
         </section>
       </div>
 
         <section class="dashboard-section">
-          <p>Accéder au menu :</p>
           <button routerLink="/menu" class="btn">
             Menu
           </button>
