--- a/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
@@ -4,42 +4,34 @@
       <h1>Tableau de bord – Administrateur</h1>
     </header>
     <div class="dashboard-body">
-      <p>Accédez aux fonctionnalités d’administration :</p>
 
       <div class="dashboard-buttons">
 
 
         <section class="dashboard-section">
           <button routerLink="/planning" class="btn">
-            Voir le planning
+            Planning
           </button>
         </section>
 
         <section class="dashboard-section">
           <button routerLink="/dashboards/operator/ingredients" class="btn">
-            Gérer les ingrédients
+            Disponibilité des ingrédients
           </button>
         </section>
 
         <section class="dashboard-section">
           <button routerLink="/dashboards/admin/accounting" class="btn">
-            Ouvrir la comptabilité
+            Comptabilité
           </button>
         </section>
 
         <section class="dashboard-section">
-          <button routerLink="/dashboards/admin/settings" class="btn">
-            Réglages généraux
-          </button>
-        </section>
-      </div>
-
-        <section class="dashboard-section">
-          <p>Accéder au menu :</p>
           <button routerLink="/menu" class="btn">
             Menu
           </button>
         </section>
+      </div>
     </div>
   </div>
 </div>
