--- a/frontend/src/app/features/dashboards/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/user-dashboard/user-dashboard.component.html
@@ -3,9 +3,11 @@
     <header class="dashboard-header">
       <h1>Tableau de bord – Utilisateur</h1>
     </header>
-
-    <div class="dashboard-body">
-      <button routerLink="/menu" class="btn">Voir le menu</button>
+    <div class="admin-card-grid">
+      <div class="admin-card" routerLink="/menu">
+        <h3>Menu</h3>
+        <p>Consulter le menu et commander</p>
+      </div>
     </div>
   </div>
 </div>
