--- a/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
@@ -3,22 +3,30 @@
     <header class="dashboard-header">
       <h1>Tableau de bord – Administrateur</h1>
     </header>
-    <div class="admin-card-grid">
-      <div class="admin-card" routerLink="/dashboards/operator/ingredients">
-        <h3>Gestion des Ingrédients</h3>
-        <p>Gérer la disponibilité des ingrédients pour les pizzas</p>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="admin-card" routerLink="/dashboards/operator/ingredients">
+          <h3>Gestion des Ingrédients</h3>
+          <p>Gérer la disponibilité des ingrédients pour les pizzas</p>
+        </div>
       </div>
-      <div class="admin-card" routerLink="/planning">
-        <h3>Planning</h3>
-        <p>Voir toutes les commandes en cours</p>
+      <div class="col-md-6">
+        <div class="admin-card" routerLink="/planning">
+          <h3>Planning</h3>
+          <p>Voir toutes les commandes en cours</p>
+        </div>
       </div>
-      <div class="admin-card" routerLink="/menu">
-        <h3>Menu</h3>
-        <p>Passer une commande</p>
+      <div class="col-md-6">
+        <div class="admin-card" routerLink="/menu">
+          <h3>Menu</h3>
+          <p>Passer une commande</p>
+        </div>
       </div>
-      <div class="admin-card">
-        <h3>Comptabilité</h3>
-        <p>Consulter les rapports de ventes</p>
+      <div class="col-md-6">
+        <div class="admin-card">
+          <h3>Comptabilité</h3>
+          <p>Consulter les rapports de ventes</p>
+        </div>
       </div>
     </div>
   </div>
