--- a/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
@@ -3,18 +3,24 @@
     <header class="dashboard-header">
       <h1>Tableau de bord – Opérateur</h1>
     </header>
-    <div class="admin-card-grid">
-      <div class="admin-card" routerLink="/planning">
-        <h3>Planning</h3>
-        <p>Gestion des commandes en cours</p>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="admin-card" routerLink="/planning">
+          <h3>Planning</h3>
+          <p>Gestion des commandes en cours</p>
+        </div>
       </div>
-      <div class="admin-card" routerLink="/dashboards/operator/ingredients">
-        <h3>Ingrédients</h3>
-        <p>Gérer la disponibilité des ingrédients</p>
+      <div class="col-md-6">
+        <div class="admin-card" routerLink="/dashboards/operator/ingredients">
+          <h3>Ingrédients</h3>
+          <p>Gérer la disponibilité des ingrédients</p>
+        </div>
       </div>
-      <div class="admin-card" routerLink="/menu">
-        <h3>Menu</h3>
-        <p>Voir le menu et passer une commande</p>
+      <div class="col-md-6">
+        <div class="admin-card" routerLink="/menu">
+          <h3>Menu</h3>
+          <p>Voir le menu et passer une commande</p>
+        </div>
       </div>
     </div>
   </div>
