--- a/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/admin-dashboard/admin-dashboard.component.html
@@ -5,7 +5,7 @@
     </header>
     <div class="row g-4">
       <div class="col-md-6">
-        <div class="admin-card" routerLink="/dashboards/operator/ingredients">
+        <div class="admin-card" routerLink="/ingredients">
           <h3>Gestion des Ingrédients</h3>
           <p>Gérer la disponibilité des ingrédients pour les pizzas</p>
         </div>
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="admin-card">
+        <div class="admin-card" routerLink="/comptabilite">
           <h3>Comptabilité</h3>
           <p>Consulter les rapports de ventes</p>
         </div>
