--- a/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
+++ b/frontend/src/app/features/dashboards/operator-dashboard/operator-dashboard.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="admin-card" routerLink="/dashboards/operator/ingredients">
+        <div class="admin-card" routerLink="/ingredients">
           <h3>Ingrédients</h3>
           <p>Gérer la disponibilité des ingrédients</p>
         </div>
